--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: sdk-kafka-tools-service
   kafka:
     bootstrap-servers: 192.168.0.27:9092
-
+#    bootstrap-servers: 172.30.1.193:9092,172.30.1.194:9092,172.30.13.179:9092
     source-topic: data-platform-storage-1
 #    target-topic: data-platform-storage-1
     target-topic: targetTopic
